# GPU-Computing-2025-256178

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  run_baseline.sh  run_calibration.sh  run_cluster.sh  run_gpu.sh  run_metrics.sh  run_showcase.sh  run_video.sh
.old/lsh/: Makefile
.old/lsh/inc/: gpu_hash_table.cuh  lsh_cuda.cuh
.old/lsh/src/: data.c  lsh.c  main.c  main.cu
.old/spmv/: Makefile
inc/: cluster.h  cluster_acc.h  distances.h  kmeans.h  metrics.h
labs/lab1/: Makefile  es5.c  run.sh
lsh/: Makefile  run.sh
lsh/inc/: data.h  lsh.h
lsh/python/: generate_data.py
lsh/src/: lsh.c  main.c
old/lsh/inc/: data.h  lsh.h  nn_search.h
old/lsh/python/: generate_data.py
old/lsh/src/: gpu_hash_table.cu  lsh_cuda.cu  nn_search.c
old/spmv/inc/: data.h  spmv.h  spmv_cuda.cuh
old/spmv/python/: chart.ipynb
old/spmv/src/: data_cuda.cu  main_cuda.cu
plots/: plot_src.ipynb  requirements.txt
smdv/: Makefile  cachegrind.out.38166
smdv/inc/: data.cuh  data.h  smdv.cuh  smdv.h  smdv_cuda.cuh  utils.cuh
smdv/src/: data.cu  main.c  main.cu  smdv.c  smdv.cu  smdv_cuda.cu
spmv/: Makefile  run_gpu.sh
spmv/inc/: data.cuh  data_cuda.cuh  spmv.cuh  spmv.h  spmv_cpu.cuh  spmv_cuda.cuh
spmv/python/: chart.ipynb
spmv/src/: data.c  data.cu  main.c  main.cu  main_cuda.cu  spmv.c  spmv.cu  spmv_cpu.cu  spmv_cuda.cu  utils.cu
src/: cluster.c  cluster_acc.c  main.cpp  main_image.cpp  main_metrics.cpp  main_profile.cpp  main_video.cpp  main_video_calibration.cpp  main_video_showcase.cpp  metrics.c
